@@ -209,6 +209,7 @@ test_22_pointer() {
     assert_out "1;2;3;4;5;6;77;78" ./ptrmemb
     assert_out "7" ./ptrmemb2
     assert_out "OK;OK;OK;OK" ./addressof
+    assert_out "-4;-5;-5;-3" ./ptrdiff
     assert_compile_error deref-semcheck1.cb
     assert_compile_error deref-semcheck2.cb
     assert_compile_error deref-semcheck3.cb
